tdf#161488: allow failed image loading in repair mode

Change-Id: I19a68f2f016b5ab95565c7fbcc4c435cf13c6b48
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/168596
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Jenkins